--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 		 <h1 style="color:white; background-color:red; text-align:center">PHOTOS</h1>
 		  <img src="images/abm.jpg" width="650" height=""  border="10" alt="atik's photo">
 		  <img src="images/atik.png" width="630" height="" alt="atik's photo">
-		  <img src="images/22.jpg" alt="atik's photo">
-		  <img src="images/unt.png" width="300" height="" border="40" alt="atik's photo">
-		  <img src="images/unt.png" width="340" height="" alt="atik's photo">
+		  <img src="images/22.JPG" alt="atik's photo">
+		  <img src="images/Unt.png" width="300" height="" border="40" alt="atik's photo">
+		  <img src="images/Unt.png" width="340" height="" alt="atik's photo">
 		  <h1 style="color: white; text-align: center;background-color: white"> _________________</h1>
 		  
 
